# AI-Text-Sentiment-Analyzer

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  run.ps1  run.sh  test_output.txt
sentiment_analyzer/: api.py  out.txt  out_utf8.txt  output.txt  pyproject.toml  sentiment_model.py
